<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--ImageVIew to display our Course Image-->

        <!--Text View to display Course Name-->
        <ImageView
            android:id="@+id/rec_frameFP"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp" />

        <TextView
            android:id="@+id/predicted_classFp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/rec_frameFP"
            android:text="@string/time_stamp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--Text VIew to display COurse Rating-->
        <!--Image used in present in drawable folder-->
        <TextView
            android:id="@+id/probabiltyFp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/predicted_classFp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/rec_frameFP"
            android:drawablePadding="2dp"
            android:text="@string/predicted_class"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/crop_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/probabiltyFp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/rec_frameFP"
            android:drawablePadding="2dp"
            android:text="@string/crop_type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/crop_type"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/rec_frameFP"
            android:drawablePadding="2dp"
            android:text="@string/latitude"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/latitude"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/rec_frameFP"
            android:drawablePadding="2dp"
            android:text="@string/longitude"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
